# pybomwater

./: .gitignore  .travis.yml  LICENSE  README.md  build_requirements.sh  environment.yml  pyproject.toml  requirements.txt  setup.py  tasklist.md
.github/workflows/: main.yml  release.yml  release_test.yml
bom_water/: _version.py  bom_water.py  spatial_util.py
bom_water/cache/: waterML_GetCapabilities.json  waterML_GetDataAvailability.json
core/: __init__.py  bom_water.py
doc/: Streamflow_data_quality_codes_Water_Information_Bureau_of_Meteorology.csv
pybomwater/: __init__.py  _version.py  bom_water.py  spatial_util.py
test/: Untitled-1.json  __init__.py  response.xml  test_GetCapabilities.json  test_GetFeatureOfInterest.json  test_core.py
test/test_data/: mdb_Watertemp_stations.json
test/test_data/Spatial/: mdb_buffer_1km.shp  mdb_buffer_1km.shx  test_filter_layer.shp  test_filter_layer.shx
