[tool.poetry]
name = "pybomwater"
version = "0.0.8"
description = "A python tool for requesting data from BoM Sensor Observation Service (SOS2, as WaterML 2.0 format)"
authors = ["Andrew Freebairn <andrew.freebairn@csiro.au>"]
license = "CSIRO Open Source Software Licence Agreement (variation of the BSD / MIT License)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
iso8601 = "^2.1.0"
pytz = "^2023.3.post1"
geojson = "^3.0.1"
shapely = "^2.0.1"
pytest = "^7.4.2"
lxml = "^4.9.3"
xmltodict = "^0.13.0"
pandas = "^2.1.1"
fiona = "^1.9.4.post1"
codecov = "^2.1.13"
pytest-cov = "^4.1.0"
owslib = "^0.29.2"
geopandas = "^0.14.0"
xarray = "^2023.9.0"
scipy = "^1.11.3"
netcdf4 = "^1.6.4"
wheel = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
